kubernetes/green-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: hello-whale-green-svc
  labels:
    app: hello-whale-app
    version: green
spec:
  selector:
    app: hello-whale-app
  type: LoadBalancer
  externalIPs:
    - 192.168.0.121
  ports:
  - port: 80
    targetPort: 80
