kubernetes/green-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  name: green-ingress
spec:
 rules:
  - host: hello.whale
    http:
      paths:
      - backend:
          serviceName: hello-whale-blue-svc
          servicePort: 80
